--- a/resources/src/admin/styles/limitless/compile/components.scss
+++ b/resources/src/admin/styles/limitless/compile/components.scss
@@ -113,7 +113,7 @@
 @import "../components/notifications/jgrowl.scss";
 
 // Sweet Alerts
-@import "../components/notifications/sweet-alerts";
+//@import "../components/notifications/sweet-alerts";
 
 
 // Sliders
