--- a/resources/src/admin/styles/limitless/compile/components.scss
+++ b/resources/src/admin/styles/limitless/compile/components.scss
@@ -143,7 +143,7 @@
 // ------------------------------
 
 // [Material] Ripple effect
-@import "../components/ui/ripple";
+//@import "../components/ui/ripple";
 
 // Prism - syntax highlighter
 @import "../components/ui/prism";
